--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install GoReleaser
         run: |
-          curl -sSL https://github.com/goreleaser/goreleaser/releases/download/v2.7.0/goreleaser_$(uname)-$(arch).tar.gz | tar -xzv
+          curl -sSL https://github.com/goreleaser/goreleaser/releases/download/v2.7.0/goreleaser_Linux_x86_64.tar.gz | tar -xzv
 
       - name: Run GoReleaser
         run: |
