fix goreleaser flag
Signed-off-by: Ruslan Semagin <pixel.365.24@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,6 @@ jobs:
 
       - name: Run GoReleaser
         run: |
-          ./goreleaser release --rm-dist
+          ./goreleaser release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
