--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 before:
   hooks:
     - go mod tidy
@@ -27,7 +29,7 @@ changelog:
 
 checksum:
   ids:
-    - binaries
+    - bx
   split: true
 
 sboms:
