fix goreleaser CI
Signed-off-by: Ruslan Semagin <pixel.365.24@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ builds:
 
 archives:
   - formats: ['tar.gz']
-    name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}.tar.gz"
+    name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
 
 changelog:
   sort: asc
