--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,6 +2,7 @@ version: 2
 
 before:
   hooks:
+    - go clean -cache -modcache
     - go mod tidy
 
 builds:
@@ -11,9 +12,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
   - id: linux_arm64
     goos: [linux]
@@ -21,9 +22,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
   - id: windows_amd64
     goos: [windows]
@@ -31,9 +32,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
   - id: windows_arm64
     goos: [windows]
@@ -41,9 +42,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
   - id: darwin_amd64
     goos: [darwin]
@@ -51,9 +52,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
   - id: darwin_arm64
     goos: [darwin]
@@ -61,9 +62,9 @@ builds:
     binary: bx
     ldflags:
       - "-s -w"
-      - "-X 'github.com/pixel365/bx/cmd.buildVersion={{.Tag}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}'"
-      - "-X 'github.com/pixel365/bx/cmd.buildDate={{.Date}}'"
+      - "-X github.com/pixel365/bx/cmd.buildVersion={{.Tag}}"
+      - "-X github.com/pixel365/bx/cmd.buildCommit={{.ShortCommit}}"
+      - "-X github.com/pixel365/bx/cmd.buildDate={{.Date}}"
 
 archives:
   - id: linux_amd64
