Ensure context cancellation on command execution failure
Signed-off-by: Ruslan Semagin <pixel.365.24@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,6 +41,8 @@ linters:
     cyclop:
       max-complexity: 15
     gocritic:
+      disabled-checks:
+        - exitAfterDefer
       enabled-checks:
         - rangeValCopy
   exclusions:
