--- a/.github/workflows/go-linter.yml
+++ b/.github/workflows/go-linter.yml
@@ -33,3 +33,6 @@ jobs:
         run: |
             gofmt -s -w .
             git diff --exit-code
+
+      - name: Gosec Security Checker
+        uses: securego/gosec@v2.22.4
